@@ -49,7 +49,7 @@
 
 <p><code>-select grid &#60;file&#62;</code></p>
 
-<p><code>-select stl [center] &#60;file&#62;</code></p>
+<p><code>-select stl [center] [rescale|fill] &#60;file&#62;</code></p>
 
 <p><code>-select &#60;i&#62; modulo &#60;j&#62;</code></p>
 
@@ -119,8 +119,7 @@ to that orientation. Otherwise the orientation assumed is X=[100], Y=[010], Z=[0
 
 <p>The two first formats allow to manipulate 2-D or 3-D grids; the last one only allows to generate 2-D grids (see examples below). This option can be used to select complex shapes.</p>
 
-<p>When using <strong>-select stl</strong>, atoms are selected according to the 3-D shape defined in the &#60;file&#62;. The &#60;file&#62; must comply to the <a href="https://en.wikipedia.org/wiki/STL_(file_format)">STL file format</a>, either in ASCII or in binary form. This file format is widely used in 3-D printing and other 3-D applications, and can be generated by a large number of 3-D softwares, a few examples being <a href="http://tinkercad.com/">Tinkercad</a>, <a href="http://www.blender.org/">Blender</a>, or <a href="http://sketchup.google.com/">Google Sketchup</a>; or, models can be downloaded from a variety of sources, e.g. <a href="https://cults3d.com/">Cults</a>, <a href="https://pinshape.com/">Pinshape</a>, or <a href="https://www.thingiverse.com/">Thingiverse</a>. After reading the STL file, Atomsk automatically rescales the 3-D model to fit the dimensions of the atomic system, the scaling factor being equal to the smallest ratio between an atomic box dimension and the corresponding 3-D model 
-dimension. If the keyword "center" appears before the name of the &#60;file&#62;, then the 3-D model is placed at the center of the atomic box. Otherwise, the 3-D model is not translated in any way. Atoms that are <em>inside</em> of the 3-D model are selected; to select atoms that are outside of it, simply use "-select invert". Note that, if the 3-D model contains a large number of triangles (over 100,000), the selection may take a long time to perform.</p>
+<p>When using <strong>-select stl</strong>, atoms are selected according to the 3-D shape defined in the &#60;file&#62;. The &#60;file&#62; must comply to the <a href="https://en.wikipedia.org/wiki/STL_(file_format)">STL file format</a>, either in ASCII or in binary form. This file format is widely used in 3-D printing and other 3-D applications, and can be generated by a large number of 3-D softwares, a few examples being <a href="http://tinkercad.com/">Tinkercad</a>, <a href="http://www.blender.org/">Blender</a>, or <a href="http://sketchup.google.com/">Google Sketchup</a>; or, models can be downloaded from a variety of sources, e.g. <a href="https://cults3d.com/">Cults</a>, <a href="https://pinshape.com/">Pinshape</a>, or <a href="https://www.thingiverse.com/">Thingiverse</a>. If the keyword "center" appears before the name of the &#60;file&#62;, then the 3-D model is placed at the center of the atomic box. If the keyword "rescale" is used, Atomsk rescales (enlarges or shrinks) the 3-D model to fit the dimensions of the atomic system while preserving the aspect ratio of the 3-D model. If the keyword "fill" is used, then the 3-D model is deformed to fill the simulation box (in this case it is automatically centered as well). The keywords "rescale" and "fill" are mutually exclusive. Atoms that are <em>inside</em> of the 3-D model are selected; to select atoms that are outside of it, simply use "-select invert". Note that, if the 3-D model contains a large number of triangles (over 100,000), the selection may take a long time to perform.</p>
 
 <p>For all the cases above (except "-select all" and "-select invert"), it is possible to use one of the optional keywords "add", "rm", "intersect", or "xor", right after the keyword "-select". These keywords allow to modify a previous selection, by combining it with new criteria. Let us assume that a previous call to the option "-select" has selected a group A of atoms, and that a new call corresponds to a group B, then those keywords perform the following operations:</p>
 
@@ -241,6 +240,16 @@ dimension. If the keyword "center" appears before the name of the &#60;file&#62;
 </code></p></div>
 <code class="command">atomsk initial.cfg -select grid A.txt -rmatom select final.xyz</code>
 <p>The file "A.txt" contains lines of 0 and 1 that form a visual representation of the letter "A". In this case the grid is 2-dimensional. Atomsk will read the file "initial.cfg", automatically scale the grid so that it matches the box dimensions, select atoms that are inside the grid elements marked "1", and <a href="./option_rmatom.html">remove selected atoms</a>. The result will be written into "final.xyz".</p></li>
+
+<li><code class="command">atomsk initial.cfg -select stl 3d-model.stl -remove-atoms select final.xyz</code>
+<p>This will read a 3-D model from an STL file, select atoms that are inside this 3-D shape, and delete them.</p></li>
+
+<li><code class="command">atomsk initial.cfg -select stl center rescale 3d-model.stl -remove-atoms select final.xyz</code>
+<p>This will read a 3-D model from an STL file, center it and rescale it to fit the simulation box, then select atoms inside that 3-D shape, and delete them.</p></li>
+
+<li><code class="command">atomsk initial.cfg -select stl fill 3d-model.stl -remove-atoms select final.xyz</code>
+<p>This will read a 3-D model from an STL file, deform it so it fills the simulation box, select atoms that are inside this 3-D shape, and delete them.</p></li>
+
 </ul>
 
 
