@@ -49,7 +49,7 @@
 
 <p><code>-select grid &#60;fichier&#62;</code></p>
 
-<p><code>-select stl [center] &#60;fichier&#62;</code></p>
+<p><code>-select stl [center] [rescale|fill] &#60;fichier&#62;</code></p>
 
 <p><code>-select &#60;i&#62; modulo &#60;j&#62;</code></p>
 
@@ -119,8 +119,7 @@ de leur espèce chimique.</p>
 
 <p>Les deux premiers formats permettent de manipuler des grilles en 2-D ou en 3-D ; le dernier format, uniquement des grilles bidimensionnelles (voir les exemples ci-dessous). Cette option permet de sélectionner des formes complexes.</p>
 
-<p>En utilisant <strong>-select stl</strong>, les atomes sont sélectionnés selon le modèle 3-D défini dans le &#60;fichier&#62;. Le &#60;fichier&#62; doit être au <a href="https://fr.wikipedia.org/wiki/Fichier_de_st%C3%A9r%C3%A9olithographie">format STL</a>, ASCII ou binaire. Ce format de fichier est très utilisé pour l'impression 3-D et dans d'autres applications 3-D, et peut être généré à l'aide de nombreux logiciels de modélisation 3-D, parmi lesquels <a href="http://tinkercad.com/">Tinkercad</a>, <a href="http://www.blender.org/">Blender</a>, ou <a href="http://sketchup.google.com/">Google Sketchup</a>; ou bien, des modèles prédéfinis peuvent être obtenus depuis une grande variété de sources, par exemple <a href="https://cults3d.com/">Cults</a>, <a href="https://pinshape.com/">Pinshape</a>, ou bien <a href="https://www.thingiverse.com/">Thingiverse</a>. Après avoir lu le fichier STL, Atomsk le redimensionne automatiquement pour qu'il rentre dans la boîte de simulation, le facteur étant égal au plus 
-petit rapport entre la dimension de la boîte atomique et la dimension correspondante du modèle 3-D. Si le mot-clé "center" apparaît avant le nom du &#60;fichier&#62;, alors le modèle 3-D est placé au centre de la boîte de simulation. Sinon, le modèle 3-D n'est translaté en aucune façon. Les atomes qui se trouvent <em>à l'intérieur</em> du modèle 3-D model sont selectionnés&nbsp;; pour sélectionner les atomes qui se trouvent à l'extérieur, utilisez simplement "-select invert". Notez que, si le modèle 3-D contient un très grand nombre de triangles (plus de 100&nbsp;000), alors la sélection peut prendre du temps.</p>
+<p>En utilisant <strong>-select stl</strong>, les atomes sont sélectionnés selon le modèle 3-D défini dans le &#60;fichier&#62;. Le &#60;fichier&#62; doit être au <a href="https://fr.wikipedia.org/wiki/Fichier_de_st%C3%A9r%C3%A9olithographie">format STL</a>, ASCII ou binaire. Ce format de fichier est très utilisé pour l'impression 3-D et dans d'autres applications 3-D, et peut être généré à l'aide de nombreux logiciels de modélisation 3-D, parmi lesquels <a href="http://tinkercad.com/">Tinkercad</a>, <a href="http://www.blender.org/">Blender</a>, ou <a href="http://sketchup.google.com/">Google Sketchup</a>; ou bien, des modèles prédéfinis peuvent être obtenus depuis une grande variété de sources, par exemple <a href="https://cults3d.com/">Cults</a>, <a href="https://pinshape.com/">Pinshape</a>, ou bien <a href="https://www.thingiverse.com/">Thingiverse</a>. Si le mot-clé "center" apparaît avant le nom du &#60;fichier&#62;, alors le modèle 3-D est déplacé au centre de la boîte de simulation. Si le mot-clé "rescale" est utilisé, Atomsk redimensionne (agrandit ou rétrécit) le modèle pour qu'il rentre dans la boîte de simulation, tout en préservant son facteur de forme. Si le mot-clé "fill" est utilisé, alors le modèle 3-D est déformé pour remplir la boîte de simulation (dans ce cas il est automatiquement centré). Les mots-clés "rescale" et "fill" sont mututllement exclusifs. Les atomes qui se trouvent <em>à l'intérieur</em> du modèle 3-D model sont selectionnés&nbsp;; pour sélectionner les atomes qui se trouvent à l'extérieur, utilisez simplement "-select invert". Notez que, si le modèle 3-D contient un très grand nombre de triangles (plus de 100&nbsp;000), alors la sélection peut prendre du temps.</p>
 
 <p>Pour tous les cas ci-dessus (sauf "-select all" et "-select invert"), il est possible d'utiliser l'un des mots-clés optionnels "add", "rm", "intersect", ou "xor", juste après le mot-clé "-select". Ces mots-clés permettent de modifier une sélection précédente, en la combinant avec de nouveaux critères. Supposons que l'option "-select" ait déjà été appelée et ait sélectionné un groupe d'atomes A&nbsp;; supposons qu'un nouvel appel sélectionne les atomes d'un groupe B&nbsp;; alors les mots clés correspondent aux opérations logiques suivantes&nbsp;:</p>
 
@@ -241,6 +240,16 @@ petit rapport entre la dimension de la boîte atomique et la dimension correspon
 </code></p></div>
 <code class="command">atomsk initial.cfg -select grid A.txt -rmatom select final.xyz</code>
 <p>Le fichier "A.txt" contient des lignes de 0 et de 1, qui forment une représentation graphique de la lettre "A". Atomsk va lire le fichier "initial.cfg", mettra automatiquement la grille aux dimensions de la boîte, sélectionnera les atomes situés à l'intérieur des éléments marqués d'un "1", et <a href="./option_rmatom.html">supprimera les atomes sélectionnés</a>. Le resultat sera écrit dans "final.xyz".</p></li>
+
+<li><code class="command">atomsk initial.cfg -select stl 3d-model.stl -remove-atoms select final.xyz</code>
+<p>Ceci va lire un modèle 3-D depuis un fichier STL, sélectionner les atomes à l'intérieur de cette forme 3-D, et les supprimer.</p></li>
+
+<li><code class="command">atomsk initial.cfg -select stl center rescale 3d-model.stl -remove-atoms select final.xyz</code>
+<p>Ceci va lire un modèle 3-D depuis un fichier STL, centrer et redimensionner ce modèle pour qu'il rentre dans la boîte, puis sélectionner les atomes à l'intérieur de cette forme 3-D, et les supprimer.</p></li>
+
+<li><code class="command">atomsk initial.cfg -select stl fill 3d-model.stl -remove-atoms select final.xyz</code>
+<p>Ceci va lire un modèle 3-D depuis un fichier STL, le déformer pour qu'il remplisse toute la boîte de simulation, puis sélectionner les atomes à l'intérieur de cette forme 3-D, et les supprimer.</p></li>
+
 </ul>
 
 
